--- a/.github/workflows/job_to_job.yml
+++ b/.github/workflows/job_to_job.yml
@@ -11,10 +11,10 @@ jobs:
     outputs:
       result: ${{ steps.set-output.outputs.result }}
     steps:
-      - name: Step 1: Generate a value
+      - name: "Step 1: Generate a value"
         run: echo "GeneratedValue" > value.txt
 
-      - name: Step 2: Set the value to GITHUB_OUTPUT
+      - name: "Step 2: Set the value to GITHUB_OUTPUT"
         id: set-output
         run: echo "result=$(cat value.txt)" >> $GITHUB_OUTPUT
 
@@ -22,5 +22,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - name: Step 1: Use the value from job1
-        run: echo "Received value from job1: ${{ needs.job1.outputs.result }}"
+      - name: "Step 1: Use the value from job1"
+        run: 'echo "Received value from job1: ${{ needs.job1.outputs.result }}"'
