--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -8,6 +8,8 @@ jobs:
   run-bash-script:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Run custom action
         uses: ./
         with:
